[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/enemy/Range_Enemy.gd" type="Script" id=1]
[ext_resource path="res://Scenes/enemy/Foozle_2DC0015_Lucifer_Goblin_Berserker_Pixel_Art/Down/Png/GoblinDown_range.png" type="Texture" id=2]

[sub_resource type="CanvasItemMaterial" id=42]

[sub_resource type="Animation" id=34]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 29, 30, 31, 32, 33 ]
}

[sub_resource type="Animation" id=36]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=37]
resource_name = "Run"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 23, 24, 25, 26, 27, 28 ]
}

[sub_resource type="Animation" id=38]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}

[sub_resource type="Animation" id=39]
resource_name = "damage"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 19, 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=40]
resource_name = "death"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14, 15, 16, 17, 18 ]
}

[sub_resource type="CircleShape2D" id=9]
radius = 434.166

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 9.75, 19.5 )

[sub_resource type="CircleShape2D" id=17]
radius = 195.164

[node name="Enemy6" type="KinematicBody2D" groups=["enemy"]]
self_modulate = Color( 1.01, 1.01, 1.01, 1 )
collision_mask = 0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
material = SubResource( 42 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
hframes = 35

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite")
anims/Idle = SubResource( 34 )
anims/RESET = SubResource( 36 )
anims/Run = SubResource( 37 )
anims/attack = SubResource( 38 )
anims/damage = SubResource( 39 )
anims/death = SubResource( 40 )

[node name="Bulletpoint" type="Node2D" parent="."]
position = Vector2( 32, 0 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
priority = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 6.5 )
shape = SubResource( 10 )

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="CollisionShape2D"]
avoidance_enabled = true
radius = 1.0

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( 0, 3 )
shape = SubResource( 17 )

[node name="end_of_weapon" type="Node2D" parent="."]
position = Vector2( 0, 40 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="velocity_computed" from="CollisionShape2D/NavigationAgent2D" to="." method="_on_NavigationAgent2D_velocity_computed"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="body_exited" from="Area2D2" to="." method="_on_Area2D2_body_exited"]
